<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        android:layout_weight="0.4">

        <ImageView
            android:id="@+id/img_giris"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/img_giris" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_weight="0.4"
        android:paddingBottom="53dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/txtgiris1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/laila"
                    android:paddingLeft="20dp"
                    android:text="@string/basit_ve"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/txtgiris2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/laila"
                    android:paddingLeft="20dp"
                    android:text="@string/kullan_l"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/txtgiris3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/laila"
                    android:paddingLeft="20dp"
                    android:text="@string/mesajla_ma"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/txtgiris4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/laila"
                    android:paddingLeft="20dp"
                    android:text="@string/uygulamas"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="normal" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/giris_buton"
            android:layout_width="289dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="61dp"
            android:backgroundTint="#D9D9D9"
            android:text="@string/hadi_ba_layal_m"
            android:textColor="#3F2E3E" />

    </RelativeLayout>


</LinearLayout>